[metadata]
name = flusso
version = 0.0.1
author = Tomiwa Adey
author_email = tomiwa@tomiwaadey.com
description = Rust Inspired Type-Safe Errors and Missing Values for Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gum-tech/flusso
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True